style: upd docs, go mod name
